overflow issue resolved in hero area

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,5 +6,5 @@
   scroll-behavior: smooth;
 }
 .hero-area-wrapper {
-  overflow-x: hidden;
+  overflow: hidden;
 }
